<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin_welcome"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogo_welcome"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSignup_welcome"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="240dp"
        android:backgroundTint="@color/blue"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin_welcome"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnlogo_welcome"
        android:layout_width="275dp"
        android:layout_height="75dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/cd_Logo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>