<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/Background"
    tools:context=".HomeActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_home"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.fragment.app.FragmentContainerView>

    <ImageButton
        android:id="@+id/btn_CurrentLocation_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/buttons_circle"
        android:backgroundTint="@color/Background"
        android:contentDescription="@string/cd_CurrentLocation"
        android:elevation="10dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@mipmap/current_location"
        app:layout_constraintBottom_toBottomOf="@+id/map_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/mainText" />


    <ImageButton
        android:id="@+id/btn_Profile_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttons_circle"
        android:backgroundTint="@color/Background"
        android:contentDescription="@string/cd_Profile"
        android:elevation="10dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@mipmap/profile"
        app:layout_constraintBottom_toBottomOf="@+id/map_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/mainText" />

    <ImageButton
        android:id="@+id/btn_Filter_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/buttons_circle"
        android:backgroundTint="@color/Background"
        android:contentDescription="@string/cd_Filter"
        android:elevation="10dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@mipmap/filter"
        app:layout_constraintBottom_toBottomOf="@+id/map_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_CurrentLocation_home"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/mainText" />

    <ImageButton
        android:id="@+id/btn_Categories_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/buttons_circle"
        android:backgroundTint="@color/Background"
        android:contentDescription="@string/cd_Category"
        android:elevation="10dp"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@mipmap/star"
        app:layout_constraintBottom_toBottomOf="@+id/map_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/mainText" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/buttons_circle"
        android:backgroundTint="@color/Background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <SearchView
            android:id="@+id/svSearch_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="true">

        </SearchView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>